task5/tests/TestMaster/output/my2_12.out
lli: TestMaster/output/my2_12.ll:1:1: error: expected top-level entity
line 2: syntax error
^
